# gRPC

./: .gitignore
client_py/: client.py  user_pb2.py  user_pb2_grpc.py
proto/: user.proto
server_cpp/: CMakeLists.txt
server_cpp/src/: main.cpp  user.grpc.pb.cc  user.grpc.pb.h  user.pb.cc  user.pb.h
